# ghostlint

./: .gitignore  LICENSE  README.md
.zcode/plans/: plan-sess_0d2bfe40-ce06-4bb5-8a75-7b36f5e21d9b.md  plan-sess_856ff90b-7c5a-4c89-8ac3-48851a3b26af.md  plan-sess_b6dbaf68-5fa9-45e7-a100-7b0475a8b14b.md
app/: README.md  pyproject.toml  report-new.txt  report-next.txt  report-one.txt  report-two.txt  report.txt  report_analysis.md  requirements.txt
app/app/: main.py
app/app/routers/: scans.py
app/ghostlint_cli/: html_report.py  main.py  mcp_setup.py  output.py  web_server.py
app/ghostlint_engine/: __init__.py  git_metrics.py  health_score.py  indexer.py  recommendations.py  scanner.py
app/ghostlint_engine/ast_engine/: __init__.py  base.py  js_parser.py  python_parser.py  ts_parser.py
app/ghostlint_engine/db/: __init__.py  models.py  session.py
app/ghostlint_engine/detectors/: __init__.py  base.py  registry.py
app/ghostlint_engine/detectors/arch_drift/: detector.py
app/ghostlint_engine/detectors/config_health/: detector.py
app/ghostlint_engine/detectors/dead_code/: __init__.py  detector.py
app/ghostlint_engine/detectors/dependency_health/: detector.py
app/ghostlint_engine/detectors/duplicate_logic/: detector.py
app/ghostlint_engine/detectors/naming/: detector.py
app/ghostlint_engine/detectors/refactor/: detector.py
app/ghostlint_engine/detectors/test_health/: detector.py
app/ghostlint_engine/graph/: __init__.py  symbol_graph.py
app/ghostlint_engine/models/: __init__.py  findings.py
app/ghostlint_mcp/: __init__.py  context_builder.py  repo_intel.py  server.py
app/tests/integration/: conftest.py  test_cli_scan.py  test_mcp_tools.py
app/tests/reports/phase1/: ai_assistant_scan.json  vectorshift_scan.json
app/tests/reports/phase2/: ai_assistant_scan.json  summary.md  vectorshift_scan.json
app/tests/reports/phase3/: summary.md
app/tests/unit/: conftest.py  test_check_diff_security.py  test_context_builder.py  test_dead_code.py  test_duplicate_logic.py  test_mcp_setup.py  test_python_parser.py  test_refactor.py  test_symbol_graph.py  test_test_health.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/ghostlint_cli/: main.py  web_server.py
backend/ghostlint_engine/: health_score.py  scanner.py
backend/ghostlint_mcp/: context_builder.py  server.py
backend/tiramasu_cli/: main.py  output.py
backend/tiramasu_engine/: __init__.py  git_analyzer.py  health_score.py  indexer.py  recommendations.py  scanner.py
backend/tiramisu_cli/: html_report.py  main.py  mcp_setup.py  output.py  web_server.py
backend/tiramisu_engine/: __init__.py  git_metrics.py  health_score.py  recommendations.py  scanner.py
backend/tiramisu_mcp/: __init__.py  context_builder.py  repo_intel.py  server.py
docs/: Repository_Health_Intelligence_PRD_v0.1.md  Repository_Health_Intelligence_Platform_Spec.md
docs/engines/: arch_drift.md  config_health.md  dead_code.md  dependency_health.md  doc_health.md  duplicate_logic.md  naming.md  refactor.md  test_health.md
docs/plan/: ai_tool_integration_options.md  git_html_report_plan.md  implementation_plan.md  mcp_integration_plan.md  pypi_submission.md  security_fixes.md
frontend/: next.config.js  package.json  tailwind.config.js
github-action/: Dockerfile  action.yml  entrypoint.sh
(+90 files in other folders)
